# routes/api.php
@@ -22,3 +22,5 @@ use Illuminate\Http\Request;
 Route::post('register', 'Auth\RegisterController@register');
 
 Route::post('login', 'Auth\LoginController@login');
+
+Route::get('buscar', 'ProjectController@buscar');
